--- a/BTK_SampleProject/BTK_SampleProject.csproj
+++ b/BTK_SampleProject/BTK_SampleProject.csproj
@@ -17,4 +17,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BTK_SampleProject_Business\BTK_SampleProject_Business.csproj" />
+  </ItemGroup>
+
 </Project>
