--- a/BTK_SampleProject/appsettings.json
+++ b/BTK_SampleProject/appsettings.json
@@ -2,6 +2,12 @@
   "ConnectionStrings": {
     "DefaultDatabase": "Server=(localdb)\\MSSQLLocalDB;Database=Demo_ECommerce;Trusted_Connection=True;"
   },
+  "JwtSettings": {
+    "Secret": "SuperSecretKeyForJWTGeneration_123456",
+    "Issuer": "yourdomain.com",
+    "Audience": "yourdomain.com",
+    "ExpirationInMinutes": 60
+  },
 
   "Logging": {
     "LogLevel": {
